fixed style errors after last updates. Styling needs lots of work but was broken on desktop view, these changes fixed those problems, but made things look a little less styled..

--- a/app/components/Footer/style.scss
+++ b/app/components/Footer/style.scss
@@ -2,7 +2,6 @@ footer {
   display: flex;
   justify-content: space-between;
   padding: 2em;
-  border-top: 1px solid #666;
   margin-top: 2rem;
   text-align: center;
 
