--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -1,4 +1,3 @@
 .header {
   padding: 0.1rem 0.2rem;
-  border-bottom: 1px solid black;
 }
